// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeToRuntimeReadyProject > omits compiled config when no config blocks are present 1`] = `
{
  "binaryAssets": [],
  "codeBlocks": [],
  "compiledModules": {},
  "postProcessEffects": [],
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`serializeToRuntimeReadyProject > serializes runtime-ready project with compiled config 1`] = `
{
  "binaryAssets": [],
  "codeBlocks": [
    {
      "code": [
        "config",
        "title "Snapshot Project"",
        "configEnd",
      ],
      "gridCoordinates": {
        "x": 0,
        "y": 0,
      },
    },
  ],
  "compiledConfig": {
    "title": "Snapshot Project",
  },
  "compiledModules": {
    "mod": {},
  },
  "compiledWasm": "b64:1",
  "memorySnapshot": "b64:2,0",
  "postProcessEffects": [],
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;
